# dreams

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .ssh  LICENSE  Makefile  README.md  pyproject.toml
docs/: _config.yml  api.rst  tutorial.md
docs/examples/: cluster_spheres_field.py  result_lmax_4.h5
docs/examples/paper/: ex1.py  ex2a.py  ex2b.py  func_helper.py  plot_ex1.py  plot_ex2.py  plot_helper.py
dreams/: __init__.py  jax_coeffs.py  jax_coord.py  jax_la_bounded.py  jax_misc.py  jax_op.py  jax_primitive.py  jax_recursive.py  jax_smat.py  jax_tmat.py  jax_tr.py  jax_waves.py  new_kernels.py
tests/: test_basics.py  test_cfg.py  test_grads_compound.py  test_grads_primitive.py  test_special_lattice.py  test_tmat_smat.py  to_sw_inputs_down.npz  to_sw_inputs_up.npz
tests/test_basics/: test_regression_rotate_helicity.npz  test_regression_rotate_parity.npz  test_regression_smatrix_grad.npz  test_regression_tmatrix_grad.npz
